--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,5 @@ Assets/Plugins/GoogleSheetstoUnity/Resources/GSTU_Config.asset
 Assets/Plugins/GoogleSheetstoUnity/Resources/GSTU_Config.asset.meta
 
 
+Assets/Plugins/Sirenix/Odin Inspector/Config/Editor/ImportSettingsConfig.asset.meta
+Assets/Plugins/Sirenix/Odin Inspector/Config/Editor/AOTGenerationConfig.asset.meta
